--- a/views/rtc.ejs
+++ b/views/rtc.ejs
@@ -165,6 +165,8 @@
                     const roomName = $("#room").val();
                     const nickName = $("#nickname").val();
                     const msg = $("#msg").val();
+                    
+                    chatRoomId = document.getElementById("room").value;
 
                     socket.emit("entryRoom",roomName,nickName);
                 });
